[gd_scene load_steps=11 format=3 uid="uid://c1bdjai3vae65"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_cp8hg"]
[ext_resource type="Shader" path="res://resources/shaders/scrolling_background.gdshader" id="2_d7tvl"]
[ext_resource type="PackedScene" uid="uid://5l4lxaur65er" path="res://scenes/game objects/box/box.tscn" id="2_sqocw"]
[ext_resource type="Shader" path="res://resources/shaders/scrolling_line.gdshader" id="3_2c65w"]
[ext_resource type="Texture2D" uid="uid://61dwan3nqs1y" path="res://graphics/background/tiled_background.png" id="3_6h6yc"]
[ext_resource type="Texture2D" uid="uid://d1qk0rutc4jb1" path="res://graphics/line/dashed_line_texture.png" id="3_m0qs8"]

[sub_resource type="Gradient" id="Gradient_05noh"]
colors = PackedColorArray(0.145098, 0.188235, 0.227451, 1, 0.258824, 0.258824, 0.258824, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qcp7t"]
gradient = SubResource("Gradient_05noh")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6cxax"]
shader = ExtResource("2_d7tvl")
shader_parameter/speed = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pffqg"]
shader = ExtResource("3_2c65w")

[node name="Game" type="Node2D"]
script = ExtResource("1_cp8hg")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="BackdropTextureRect" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_qcp7t")

[node name="PatternTextureRect" type="TextureRect" parent="Background"]
modulate = Color(0.637843, 0.637843, 0.637843, 0.0196078)
material = SubResource("ShaderMaterial_6cxax")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_6h6yc")
stretch_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DropLine" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_pffqg")
points = PackedVector2Array(0, -512, 0, 720)
width = 20.0
texture = ExtResource("3_m0qs8")
texture_mode = 1

[node name="Box" parent="." instance=ExtResource("2_sqocw")]
position = Vector2(0, 160)

[node name="AnimalContainer" type="Node2D" parent="." groups=["animal_container"]]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 720)

[node name="SpawnBufferTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="SpawnBufferTimer" to="." method="_on_spawn_buffer_timer_timeout"]
[connection signal="timeout" from="SpawnBufferTimer" to="." method="_on_input_buffer_timer_timeout"]
